feat: started adding résumé

--- a/src/404.md
+++ b/src/404.md
@@ -5,7 +5,7 @@ permalink: 404.html
 eleventyExcludeFromCollections: true
 ---
 
-We’re sorry, but that content can’t be found. Please go [back to home](/).
+Sorry friend! That content can’t be found. Please go [back to my homepage](/).
 
 {% comment %}
 Read more: https://www.11ty.io/docs/quicktips/not-found/
