Update Projects “gbbo-2021”

--- a/src/project/gbbo-2021.md
+++ b/src/project/gbbo-2021.md
@@ -10,4 +10,6 @@ tags:
   - GSAP
   - Design
 ---
-GBBO 2021
+Each year at my previous job, I ran a Great British Bake Off sweepstake for a bit of fun. As part of this I would create a site listing each baker, some mor einformation about them and the progress of the competition. This year I'm in a new position, and whilst not yet sure of myself enough to do a sweepstake, I've still put together another site.
+
+To be honest it's felt this year like the pressure was a off a little bit, and that I could try a few new things I'd been interested in recently in the knowledge that nobody else is going to see this!
